crates/tree-sitter-vola/corpus/art_expr.txt
==================
art def
==================

alge my_expr(){
    let a = 5 + 4 * 10.0;
    a
}

---

(source_file
  (alge_definition
    (identifier)
    (parameter_list)
    (scoped_expr
       (let_stmt
         (typed_identifier
           (identifier))
      (binary_expr
        (float
          (number))
      (binary_expr
        (float
          (number))
        (float
          (number)
          (number)))))
      (identifier))))

==================
art let
==================

op test<p>(){
    let a = x;
    p
}

---

(source_file
  (op_definition
    (identifier)
    (prim_list
      (identifier))
    (parameter_list)
    (block
      (let_stmt
        (typed_identifier
          (identifier))
        (identifier))
      (prim_expr
        (identifier)))))


==================
art calc
==================

op test<p>(){
    let a = 5 + x;
    p
}

---

(source_file
  (op_definition
    (identifier)
    (prim_list
      (identifier))
    (parameter_list)
    (block
      (let_stmt
        (typed_identifier
          (identifier))
        (binary_expr
          (float
            (number))
          (identifier)))
      (prim_expr
        (identifier)))))

==================
art call
==================

op test<p>(){
    let a = some_function();
    p
}

---

(source_file
  (op_definition
    (identifier)
    (prim_list
      (identifier))
    (parameter_list)
    (block
      (let_stmt
        (typed_identifier
          (identifier))
        (call_expr
         (identifier)))
      (prim_expr
        (identifier)))))

==================
nested_call
==================

op test<p>(){
    let a = min(max(a, b), c);
    p
}

---

(source_file
  (op_definition
    (identifier)
    (prim_list
      (identifier))
    (parameter_list)
    (block
      (let_stmt
        (typed_identifier
          (identifier))
        (call_expr
         (identifier)
         (call_expr
           (identifier)
           (identifier)
           (identifier))
         (identifier)))
      (prim_expr
        (identifier)))))
