crates/tree-sitter-vola/corpus/field.txt

==================
complex field
==================

field my_field(){
    let a = 10;
    let b = 4;
    def point = point();
    def transphere = translate<sphere(5.0), point>([1.0, 0.0, a + b]);
    def mybox = box(1.0);

    smooth_union<transphere, mybox>(1.0)
}

---

(source_file
  (field_definition
    (identifier)
    (parameter_list)
    (block
      (let_stmt
        (typed_identifier
          (identifier))
        (float
          (number)))
      (let_stmt
        (typed_identifier
          (identifier))
        (float
          (number)))
      (def_prim
        (kw_prim)
        (identifier)
        (prim_expr
          (call_expr
            (identifier))))
      (def_prim
        (kw_prim)
        (identifier)
        (prim_expr
          (optree
            (identifier)
            (prim_expr
              (call_expr
                (identifier)
                (float
                  (number)
                  (number))))
            (prim_expr
              (identifier))
            (list
              (float
                (number)
                (number))
              (float
                (number)
                (number))
              (binary_expr
                (identifier)
                (identifier))))))
      (def_prim
        (kw_prim)
        (identifier)
        (prim_expr
          (call_expr
            (identifier)
            (float
              (number)
              (number)))))
      (prim_expr
        (optree
          (identifier)
          (prim_expr
            (identifier))
          (prim_expr
            (identifier))
          (float
            (number)
            (number)))))))

==================
noarg op in field
==================

field my_field(){
    union<transphere, mybox>()
}

---
(source_file
      (field_definition
        (identifier)
        (parameter_list)
        (block
          (prim_expr
            (optree
              (identifier)
              (prim_expr
                (identifier))
              (prim_expr
                (identifier)))))))
==================
noarg noprim op in field
==================

field my_field(){
    identityop<>()
}

---
(source_file
      (field_definition
        (identifier)
        (parameter_list)
        (block
          (prim_expr
            (optree
              (identifier))))))
